[package]
name = "tiktok_video_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
reqwest = { version =  "0.12.22", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
